packages/konduktor-nightly/konduktor_nightly-0.1.0.dev20260130110510-py3-none-any.whl/konduktor/manifests/apoxy-setup2.yaml
# HTTPRoute for vLLM deployments
apiVersion: gateway.apoxy.dev/v1
kind: HTTPRoute
metadata:
  name: UNIQUE-TEMPNAME-route
spec:
  parentRefs:
    - name: default 
      kind: Gateway
      port: 443
  hostnames:
    - 'TEMPNAME.trainy.us'
  rules:
    - backendRefs:
      - kind: Backend
        name: UNIQUE-TEMPNAME-backend
        port: 80
      timeouts:
        request: "60s"
---
# HTTPRoute for general deployments
apiVersion: gateway.apoxy.dev/v1
kind: HTTPRoute
metadata:
  name: UNIQUE-TEMPNAME-route2
spec:
  parentRefs:
    - name: default 
      kind: Gateway
      port: 443
  hostnames:
    - 'TEMPNAME2.trainy.us'
  rules:
    - backendRefs:
      - kind: Backend
        name: UNIQUE-TEMPNAME-backend2
        port: 80
      timeouts:
        request: "60s"

# KEDA proxy service (1 per cluster) (For general deployments)
---
apiVersion: v1
kind: Service
metadata:
  name: keda-proxy
  namespace: default
spec:
  type: ExternalName
  externalName: keda-add-ons-http-interceptor-proxy.keda
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
